--- a/dualwield2/AndroidManifest.xml
+++ b/dualwield2/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="net.zhuoweizhang.mcpelauncher.addon.dualwield"
-        android:versionCode="2"
-        android:versionName="1.1">
+        android:versionCode="3"
+        android:versionName="1.2">
 
     <uses-permission android:name="net.zhuoweizhang.mcpelauncher.ADDON"/>
     <!-- This is the platform API where NativeActivity was introduced. -->
@@ -14,6 +14,7 @@
     <!-- metadata specifying the library name. must match Android.mk.-->
     <meta-data android:name="net.zhuoweizhang.mcpelauncher.api.nativelibname"
         android:value="net.zhuoweizhang.mcpelauncher.addon.dualwield"/>
+    <meta-data android:name="net.zhuoweizhang.mcpelauncher.api.targetmcpeversion" android:value="0.13.1"/>
     </application>
 
 </manifest> 
